--- a/tmux.conf
+++ b/tmux.conf
@@ -12,4 +12,30 @@ bind r source-file ~/.tmux.conf \; display "Reloaded."
 
 bind C-a send-prefix
 
+# Window split bindings
+bind \ split-window -h
+bind - split-window -v
 
+# highlight window when it has new activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Pane resize shortcuts
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+
+# Selecting panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
