--- a/tmux.conf
+++ b/tmux.conf
@@ -39,3 +39,5 @@ set -g status-fg white
 # highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
+
+set -g mouse-select-pane on
