--- a/tmux.conf
+++ b/tmux.conf
@@ -40,4 +40,5 @@ set -g status-fg white
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
 
-set -g mouse-select-pane on
+# set -g mouse-select-pane on
+set -g mouse-select-pane off
