--- a/tmux.conf
+++ b/tmux.conf
@@ -44,3 +44,6 @@ set-window-option -g window-status-current-bg green
 
 # set -g mouse-select-pane on
 set -g mouse-select-pane off
+
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
