--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded."
 bind C-a send-prefix
 
 # Window split bindings
-bind \ split-window -h
+bind '\' split-window -h
 bind - split-window -v
 
 # highlight window when it has new activity
@@ -23,10 +23,10 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Pane resize shortcuts
-bind H resize-pane -L 10
-bind J resize-pane -D 10
-bind K resize-pane -U 10
-bind L resize-pane -R 10
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
 # Selecting panes
 bind h select-pane -L
@@ -39,11 +39,11 @@ set -g status-bg colour235
 set -g status-fg white
 
 # highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-style fg=black
+set-window-option -g window-status-current-style bg=green
 
 # set -g mouse-select-pane on
-set -g mouse-select-pane off
+#set -g mouse-select-pane off
 
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
